<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_border"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/add_exam"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etExamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Nome esame"
                android:hint="@string/nome_esame"
                android:inputType="text" />

            <EditText
                android:id="@+id/etCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="CFU"
                android:hint="@string/CFU"
                android:inputType="number" />

            <EditText
                android:id="@+id/etGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Voto"
                android:hint="@string/voto"
                android:inputType="number" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/purple"
                android:text="@string/salva"
                android:textSize="17sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goBack"
        android:padding="7dp"
        android:text="@string/indietro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>
